Changelog for changes with respect to version 1.0
-------------------------------------------------

Nov 8 2010
- Fixed small typo in configuration help printout
